# thoth-on.ai

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  __init__.py  deps.py  main.py  schemas.py  service.py
api/routers/: __init__.py  cases.py  detection.py  graph.py  health.py  kpi.py  llm.py
console/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  index.css  vite-env.d.ts
core/: case_demo.py  cases.py
data/: cases.db
detection/: 03_fraud_queries.cypher  __init__.py  attribute_model.py  benchmark.py  detect.py  dual_layer.py  embedding.py  evaluate.py  features.py  feedback.py  gds_pipeline.py  ml_model.py  model_store.py  paths.py  scoring.py
docs/: DEMO.md  kaggle_distributions_auto.md  kaggle_findings.md
explain/: __init__.py  explainer.py  provider.py
graph/: 01_schema.cypher  ontology.md
ingest/: __init__.py  entity_resolution.py  kaggle_analysis.py  kaggle_graph.py  loader.py  mapping.md  normalize.py  pii.py  synth_generator.py
logs/: audit.jsonl
manual/: index.html
tests/: conftest.py  test_api.py  test_attribute_model.py  test_case_explain.py  test_detection.py  test_dual_layer.py  test_embedding.py  test_entity_resolution.py  test_feedback.py  test_gds.py  test_incremental_ingest.py  test_kaggle.py  test_ml.py  test_model_store.py  test_neo4j_health.py  test_provider_status.py  test_security.py  test_smoke.py  test_wp1_data_core.py
thoth/: __init__.py  config.py  db.py
(+14 files in other folders)
